Some Modifications in template
- Reflects use for some presentations given

--- a/_extensions/emctemplatereveal/title-slide.html
+++ b/_extensions/emctemplatereveal/title-slide.html
@@ -1,4 +1,6 @@
+
 <section id="$idprefix$title-slide" style="text-align: left; margin-left: 0" $for(title-slide-attributes/pairs)$ $it.key$="$it.value$"$endfor$>
+  <div class="wraparoundbottomright"></div>
 $if(series)$
 	<h3 class="subtitle">$series$</h3>
 $endif$   
